static/psi4manual/1.5.0/_sources/autodoc_dft_meta.rst.txt

.. table:: Meta functionals available in |PSIfour|

   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                Name |                                                                      Description |       GGA? |      Meta? |     X_LRC? |  X_Hybrid? |     C_LRC? |  C_Hybrid? |         C_SCS? SS/OS |          Dispersion? |                                                      Dispersion Description |
   +=====================================+==================================================================================+============+============+============+============+============+============+======================+======================+=============================================================================+
   |                              B86B95 |                                   B86B95 Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              B88B95 |                                   B88B95 Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         B88B95-D3BJ |                              B88B95-d3bj Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           B97M-D3BJ |                                    B97M-V with D3(BJ) instead of VV10 dispersion |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              B97M-V |                                       B97M-V GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                BB1K |                                     BB1K Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.420000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 BMK |                                   BMK Hybrid Meta-GGA XC Functional for kinetics |     Y      |     Y      |    ---     |  0.420000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            BMK-D3BJ |                                   BMK Hybrid Meta-GGA XC Functional for kinetics |     Y      |     Y      |    ---     |  0.420000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                DLDF |                                     Dispersionless Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.614413  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            DLDF+D09 |                                     Dispersionless Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.614413  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            DLDF+D10 |                                     Dispersionless Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.614413  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          DSD-PBEB95 |   DSD-PBEB95 SCS Double Hybrid Meta-GGA XC Functional (not dispersion corrected) |     Y      |     Y      |    ---     |  0.690000  |    ---     |  1.000000  |  0.220000 / 0.480000 |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                     DSD-PBEB95-D3BJ |    DSD-PBEB95-D3BJ Dispersion-corrected SCS Double Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.660000  |    ---     |  1.000000  |  0.090000 / 0.460000 |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                       DSD-PBEB95-NL |    DSD-PBEB95-NL (D3BJ parameters) VV10 SCS Double Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.660000  |    ---     |  1.000000  |  0.090000 / 0.460000 |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 M05 |                                                       M05 Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              M05-2X |                       Heavily Parameterized Hybrid M05-2X Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.560000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 M06 |                                                       M06 Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.270000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              M06-2X |                                             Hybrid M06-2X Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.540000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              M06-HF |                                            Minnesota M06-HF Hybrid XC Functional |     Y      |     Y      |    ---     |  1.000000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               M06-L |                                                     M06-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              M08-HX |                                            Minnesota M08-HX Hybrid XC Functional |     Y      |     Y      |    ---     |  0.522300  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              M08-SO |                                            Minnesota M08-SO Hybrid XC Functional |     Y      |     Y      |    ---     |  0.567900  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 M11 |                                                       M11 Meta-GGA XC Functional |     Y      |     Y      |  0.250000  |  0.428000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            M11-D3BJ |                                                       M11 Meta-GGA XC Functional |     Y      |     Y      |  0.250000  |  0.428000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               M11-L |                                                     M11-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          M11-L-D3BJ |                                                     M11-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            MGGA_MS0 |                                                  MGGA_MS0 Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            MGGA_MS1 |                                                  MGGA_MS1 Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            MGGA_MS2 |                                                  MGGA_MS2 Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           MGGA_MS2H |                                          MGGA_MS2h Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.090000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            MGGA_MVS |                                                  MGGA_MVS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           MGGA_MVSH |                                          MGGA_MV2h Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              MN12-L |                                                    MN12-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         MN12-L-D3BJ |                                                    MN12-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             MN12-SX |                 MN12-SX Meta-GGA Hybrid Screened Exchange-Correlation Functional |     Y      |     Y      |  0.110000  |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                        MN12-SX-D3BJ |                 MN12-SX Meta-GGA Hybrid Screened Exchange-Correlation Functional |     Y      |     Y      |  0.110000  |  0.250000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                MN15 |                             MN15 Hybrid Meta-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.440000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           MN15-D3BJ |                             MN15 Hybrid Meta-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.440000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              MN15-L |                                                    MN15-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             MPW1B95 |                                  mPW1B95 Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.310000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                        MPW1B95-D3BJ |                             mPW1B95-d3bj Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.310000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              MPWB1K |                                   mPWB1K Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.440000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         MPWB1K-D3BJ |                              mPWB1K-d3bj Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.440000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             OTPSS-D |                                      OTPSS-D GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                PKZB |                                                      PKZB Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               PTPSS |                                            PTPSS SOS Double Hybrid XC Functional |     Y      |     Y      |    ---     |  0.500000  |    ---     |  1.000000  |  0.000000 / 0.375000 |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          PTPSS-D3BJ |                                            PTPSS SOS Double Hybrid XC Functional |     Y      |     Y      |    ---     |  0.500000  |    ---     |  1.000000  |  0.000000 / 0.375000 |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              PW6B95 |                                             PW6B95 Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         PW6B95-D3BJ |                                             PW6B95 Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             PW86B95 |                                  PW86B95 Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.290000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               PWB6K |                                    PWB6K Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.460000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          PWB6K-D3BJ |                               PWB6K-d3bj Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.460000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              PWPB95 |                                           PWPB95 SOS Double Hybrid XC Functional |     Y      |     Y      |    ---     |  0.500000  |    ---     |  1.000000  |  0.000000 / 0.269000 |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         PWPB95-D3BJ |                                           PWPB95 SOS Double Hybrid XC Functional |     Y      |     Y      |    ---     |  0.500000  |    ---     |  1.000000  |  0.000000 / 0.269000 |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           PWPB95-NL |                                           PWPB95 SOS Double Hybrid XC Functional |     Y      |     Y      |    ---     |  0.500000  |    ---     |  1.000000  |  0.000000 / 0.269000 |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            REVM06-L |                                             Revised M06-L Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             REVSCAN |                                              Revised SCAN Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            REVSCAN0 |                                      Revised SCAN0 Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             REVTPSS |                                              revised TPSS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                        REVTPSS-D3BJ |                                              revised TPSS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          REVTPSS-NL |                                              revised TPSS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            REVTPSSH |                                 revTPSSh Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.100000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                       REVTPSSH-D3BJ |                            revTPSSh-d3bj Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.100000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                SCAN |                                                      SCAN Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           SCAN-D3BJ |                                                      SCAN Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               SCAN0 |                                              SCAN0 Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                              T-HCTH |                                                  Tau HCTH Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                         T-HCTH-D3BJ |                                                  Tau HCTH Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             T-HCTHH |                                           Hybrid Tau HCTH Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.150000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                TPSS |                                                      TPSS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           TPSS-D3BJ |                                                      TPSS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             TPSS-NL |                                                      TPSS Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               TPSSH |                                    TPSSh Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.100000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          TPSSH-D3BJ |                               TPSSh-d3bj Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.100000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                            TPSSH-NL |                                 TPSSh-nl Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.100000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                           TPSSLYP1W |                                    TPSSLYP1W GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                VSXC |                                                      VSXC Meta-GGA XC Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                          WB97M-D3BJ |                                   wB97M-V with D3(BJ) instead of VV10 dispersion |     Y      |     Y      |  0.300000  |  0.150000  |    ---     |    ---     |    ---               |                    Y |                                                                             |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                             WB97M-V |                                  wB97M-V Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |  0.300000  |  0.150000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                               X1B95 |                                    X1B95 Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                XB1K |                                     XB1K Hyb-GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |  0.430000  |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+
   |                                 ZLP |                                          ZLP GGA Exchange-Correlation Functional |     Y      |     Y      |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                                     ---     |
   +-------------------------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+-----------------------------------------------------------------------------+

